--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,4 +7,8 @@ html
 		script(src='https://cdn.socket.io/socket.io-1.2.0.js')
 		script(src='/javascripts/site.js')
 	body
-		block content
+		div.title-bar
+			div.title-inner
+				button#btnLogout(onclick="Account.Logout()") Logout
+		div.wrap
+			block content
